Bytter tilbake til Collectors.toList.